# wide_integer

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: benchmark.yml  ci.yml
bench/: RESULTS.md  compare_int128.cpp  compare_int256.cpp  compare_int256_random.cpp  performance.cpp
include/wide_integer/: endian_compat.h  std_compat.h  wide_integer.h  wide_integer_cxx11.h  wide_integer_cxx17.h
tests/: wide_integer_conversion_cxx11_test.cpp  wide_integer_conversion_test.cpp  wide_integer_cxx11_test.cpp  wide_integer_test.cpp
